{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 75,
  "lineage": "9ab20182-d095-11ef-538f-fcb7db67ea92",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:343953890282:internet-gateway/igw-03660fc31253965ef",
            "id": "igw-03660fc31253965ef",
            "owner_id": "343953890282",
            "tags": {
              "Name": "polemicyst-dev-igw"
            },
            "tags_all": {
              "Name": "polemicyst-dev-igw"
            },
            "vpc_id": "vpc-0ed770078ecd39e2f"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:343953890282:loadbalancer/app/polemicyst-dev-alb/251af123ff565e5e",
            "arn_suffix": "app/polemicyst-dev-alb/251af123ff565e5e",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "polemicyst-dev-alb-977117131.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:343953890282:loadbalancer/app/polemicyst-dev-alb/251af123ff565e5e",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "polemicyst-dev-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0d16c9e6cae8fdc79"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-08c0c2585efc63811"
              },
              {
                "subnet_id": "subnet-0d2f843804e254e2d"
              }
            ],
            "subnets": [
              "subnet-08c0c2585efc63811",
              "subnet-0d2f843804e254e2d"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "polemicyst-dev-alb"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "polemicyst-dev-alb"
            },
            "vpc_id": "vpc-0ed770078ecd39e2f",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:343953890282:listener/app/polemicyst-dev-alb/251af123ff565e5e/6458995e3ce41033",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:343953890282:targetgroup/polemicyst-dev-clip-tg/c31a3629f93419e2",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:343953890282:listener/app/polemicyst-dev-alb/251af123ff565e5e/6458995e3ce41033",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:343953890282:loadbalancer/app/polemicyst-dev-alb/251af123ff565e5e",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.main",
            "aws_lb_target_group.clip_worker",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "clip_worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:343953890282:targetgroup/polemicyst-dev-clip-tg/c31a3629f93419e2",
            "arn_suffix": "targetgroup/polemicyst-dev-clip-tg/c31a3629f93419e2",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 300,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 60,
                "unhealthy_threshold": 10
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:343953890282:targetgroup/polemicyst-dev-clip-tg/c31a3629f93419e2",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "polemicyst-dev-clip-tg",
            "port": 3001,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "polemicyst-dev-clip-tg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "polemicyst-dev-clip-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0ed770078ecd39e2f"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:343953890282:route-table/rtb-09da5be2b510f473c",
            "id": "rtb-09da5be2b510f473c",
            "owner_id": "343953890282",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03660fc31253965ef",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "polemicyst-dev-public-rt"
            },
            "tags_all": {
              "Name": "polemicyst-dev-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ed770078ecd39e2f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fa70520f35137937",
            "route_table_id": "rtb-09da5be2b510f473c",
            "subnet_id": "subnet-0d2f843804e254e2d"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01eb224ec0fa7e32b",
            "route_table_id": "rtb-09da5be2b510f473c",
            "subnet_id": "subnet-08c0c2585efc63811"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:343953890282:security-group/sg-0d16c9e6cae8fdc79",
            "description": "Allow HTTP/HTTPS traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d16c9e6cae8fdc79",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "polemicyst-dev-alb-sg",
            "name_prefix": "",
            "owner_id": "343953890282",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "polemicyst-dev-alb-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "polemicyst-dev-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ed770078ecd39e2f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_tasks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:343953890282:security-group/sg-05263ae3a88bd49a9",
            "description": "Allow outbound access only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05263ae3a88bd49a9",
            "ingress": [],
            "name": "polemicyst-dev-ecs-tasks-sg",
            "name_prefix": "",
            "owner_id": "343953890282",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ed770078ecd39e2f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:343953890282:subnet/subnet-0d2f843804e254e2d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d2f843804e254e2d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "343953890282",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "polemicyst-dev-public-0"
            },
            "tags_all": {
              "Name": "polemicyst-dev-public-0"
            },
            "vpc_id": "vpc-0ed770078ecd39e2f"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:343953890282:subnet/subnet-08c0c2585efc63811",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08c0c2585efc63811",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "343953890282",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "polemicyst-dev-public-1"
            },
            "tags_all": {
              "Name": "polemicyst-dev-public-1"
            },
            "vpc_id": "vpc-0ed770078ecd39e2f"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:343953890282:vpc/vpc-0ed770078ecd39e2f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-013aea46b6cb0131b",
            "default_route_table_id": "rtb-0df30c255be0a8061",
            "default_security_group_id": "sg-0fa3f6a9bf3e05188",
            "dhcp_options_id": "dopt-07a3c1104d31fb29e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ed770078ecd39e2f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0df30c255be0a8061",
            "owner_id": "343953890282",
            "tags": {
              "Name": "polemicyst-dev-vpc"
            },
            "tags_all": {
              "Name": "polemicyst-dev-vpc"
            }
          }
        }
      ]
    }
  ]
}